<resources>
    <string name="app_name">GitHub</string>
    <string name="following">Following:</string>
    <string name="followers">Followers:</string>
    <string name="username">Username</string>
    <string name="location">location:</string>
    <string name="company">Company:</string>
    <string name="repository">Repository:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Followers">followers</string>
    <string name="Following">following</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="settings">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="detail_user">Detail User</string>
</resources>